[package]
name = "l"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cacache = "11.6.0"
lmdb-rkv = "0.14.0"
serde_json = "1.0.100"
serde = { version = "1.0", features = ["derive"] }
scru128 = { version = "2.2.0", features = ["serde"] }
base64 = "0.21.2"
sled = "0.34.7"
bincode = "1.3.3"
ssri = "9.0.0"
